# yoneda

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  TODO.md  build.bat  build.lua  todo.txt
include/: algorithms.hpp  dyn_array.hpp  memory_manager.hpp  repr.hpp  stack.hpp  yoneda_all.h  yoneda_arena.h  yoneda_array.h  yoneda_assert.h  yoneda_bit.h  yoneda_core.h  yoneda_dynarray.h  yoneda_log.h  yoneda_math.h  yoneda_memory.h  yoneda_streams.h  yoneda_string.h  yoneda_time.h  yoneda_vec.h
include/yoneda/: arena.h  assert.h  core.h  intrinsics.h  log.h  memutils.h  str.h  types.h
src/: all.c  arena.c  log.c  memory_manager.cpp  memutils.c  stack.cpp  str.c  yo_arena.c  yo_arena.h  yo_assert.c  yo_assert.h  yo_intrinsics.h  yo_io.c  yo_io.h  yoneda_all.c  yoneda_arena.c  yoneda_impl_common.h  yoneda_log.c  yoneda_memory.c  yoneda_streams.c  yoneda_string.c  yoneda_time.c
tests/: test_all.c  test_memory.c
